--- a/firstMern/.ENV
+++ b/firstMern/.ENV
@@ -2,3 +2,4 @@
 MONGO_URI=mongodb+srv://aminul-auth010:aminul-auth010@cluster0.dr58q7n.mongodb.net/admin_mernstack?retryWrites=true&w=majority
 
 SECRET_KEY=MONGODBEXPRESSREACTNODESTACKDEVELOPMENT
+PORT=5000
